feat: Add programming language configuration API and related database schema
- Implemented Language API for managing programming language configurations.
- Added endpoints for listing, retrieving, creating, updating, enabling, disabling, and deleting languages.
- Introduced LanguageCommandBuilder for rendering command templates for compilation and execution.
- Updated UML diagrams to reflect new language configuration fields.
- Created SQL scripts for language table creation and initial data population.
- Enhanced documentation for Language API and configuration details.